# rebook

./: LICENSE  README.md
ReBook/: .env.example
ReBook/src/: index.html  main.js
ReBook/src-tauri/: tauri.conf.json
ReBook/src-tauri/src/: config.rs  epub.rs  lib.rs  main.rs  minimax.rs  models.rs  tts.rs
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml
src-tauri/src/: config.rs  elevenlabs.rs  epub.rs  lib.rs  models.rs
