[package]
name = "rebook"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rebook_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
base64 = "0.22"
dotenvy = "0.15"
hex = "0.4"
html2text = "0.7"
reqwest = { version = "0.11", features = ["json", "multipart", "rustls-tls"] }
roxmltree = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "0.6"
